# bxtctl

./: .gitignore  Makefile  README.md  bxtcmd.py  bxtctl.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  scratch_pad.py  test_01_pkg_upload.py  test_04_pkg_delete.py  test_10_pkg_upload.py  test_20_pkg_move.py  test_30_pkg_copy.py  test_40_pkg_delete.py  test_copy_pkg.py  test_pkg_delete.py  test_pkg_move.py  test_upload_pkg.py  testpad.py  testupload.py
Bxt/: Acl.py  BxtAcl.py  BxtConfig.py  BxtEncoder.py  BxtErrorHandler.py  BxtErrorResponse.py  BxtException.py  BxtFile.py  BxtSession.py  BxtToken.py  BxtWorkspace.py  Config.py  Http.py  HttpResult.py  LogEntry.py  LogEntryEnums.py  Logs.py  Package.py  Packages.py  PkgData.py  PkgFiles.py  PkgInfo.py  PoolEntry.py  Section.py  Token.py  User.py  Users.py  Utils.py
bxtctl/: bxtctl.py
data/: PKGBUILD
dummy-pkg/: PKGBUILD  create_dummies.sh  recreate_packages.sh
pkg-dummy/: recreate_packages.sh
pkgbuild/: PKGBUILD  README.md  recreate_packages.sh
pkgbuild-dummy/: recreate_packages.sh
samples_cmd2/: argparse_completion.py  basic_completion.py
scratchpads/: 0001_bxt_token.py  0010_pkg_upload.py  0010_pkg_upload_using_bearer.py  0010_pkg_upload_using_cookie.py  0020_pkg_move.py  0020_pkg_move_using_bearer.py  0020_pkg_move_using_cookie.py  0030_pkg_copy.py  0030_pkg_copy_using_bearer.py  0030_pkg_copy_using_cookie.py  0040_pkg_delete.py  0040_pkg_delete_using_bearer.py  0040_pkg_delete_using_cookie.py  0041_repo_delete_all.py  0050_list_section_content.py  0050_list_workspace_content.py  (+6 more)
(+54 files in other folders)
